# Eucalypto

./: .drone.yml  .gitignore  README.md  config.cfg  config_template.cfg  config_template.json  contributing.md  db.py  eucalypto.py  pyproject.toml
db/: eucalypto-schema.sql
docker/: Dockerfile
docs/: Design.md  Home.md  Index.md  Scope.md  Secrets.md  _Sidebar.md  eucalypto-erd.drawio
resources/: eucalypto-erd.drawio
src/: db.py  eucalypto.py  read_config.py
src/static/: style.css
src/templates/: base.html  home.html  signup.html  spaces.html  species_list.html
templates/: base.html  error.html  generic_plant_page.html  login.html  new_plant.html  spaces.html  species_list.html  user_account.html
test/dev/: db_test.py  main_test.py  read_config_test.py
test/staging/: db_test.py
