[tool.poetry]
name = "eucalypto"
version = "0.1.0"
description = "Self hosted plant database"
authors = ["Alby Chawula <albychawula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
flask = "^3.0.3"
hvac = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
